--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -1,25 +1,25 @@
-<div class="reset-pass-pg" >
-  <div class="nav-menu">
-      <app-main-header [pageName]="'authoriz'"></app-main-header>
-  </div>
-
-  <div class="wrapper">
-    <h2>Восстановление пароля</h2>
-
-    <form  #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
-    <div class="form-group">
-      <label for="email">{{'auth-page.login.put-mail' | translate}}</label>
-      <input type="email" placeholder="E-mail Address" id="email" formControlName="email" emailvalidator name="email" required >
-      <div class="form-controll-feedback" *ngIf="resetPass.get('email').invalid">
-        <p *ngIf="resetPass.get('email').hasError('required') && submitted">{{'auth-page.login.put-mail' | translate}}</p>
-        <p *ngIf="resetPass.get('email').invalid && submitted">{{'auth-page.login.wrong-mail' | translate}}</p>
-      </div>
+<div class="reset-pass-pg">
+    <div class="nav-menu">
+        <app-main-header [pageName]="'authoriz'"></app-main-header>
     </div>
-    <button class="btn" type="submit" [disabled]="form.invalid">
-      Сбросить пароль
+
+    <div class="wrapper">
+        <h2>{{'auth-page.reset-pass-title' | translate}}</h2>
+
+        <form #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
+            <div class="form-group">
+                <label for="email">{{'auth-page.login.put-mail' | translate}}</label>
+                <input type="email" placeholder="E-mail Address" id="email" formControlName="email" emailvalidator name="email" required>
+                <div class="form-controll-feedback" *ngIf="resetPass.get('email').invalid">
+                    <p *ngIf="resetPass.get('email').hasError('required') && submitted">{{'auth-page.login.put-mail' | translate}}</p>
+                    <p *ngIf="resetPass.get('email').invalid && submitted">{{'auth-page.login.wrong-mail' | translate}}</p>
+                </div>
+            </div>
+            <button class="btn" type="submit" [disabled]="form.invalid">
+      {{'auth-page.drop-password' | translate}}
     </button>
-  </form>
-  </div>
+        </form>
+    </div>
 
 </div>
-<app-inform-popup *ngIf="message" [(message)] ="message"></app-inform-popup>
+<app-inform-popup *ngIf="message" [(message)]="message"></app-inform-popup>
