--- a/src/app/chat/components/message-list/message-list.component.html
+++ b/src/app/chat/components/message-list/message-list.component.html
@@ -1,5 +1,5 @@
 <section class="message-wrap" *ngIf="messagesList && collocutorData">
-    <div class="more-messages" *ngIf="isShowMoreMessagesBtn && isMessages" (click)="showMoreMessages()">Предыдущие сообщения</div>
+    <div class="more-messages" *ngIf="isShowMoreMessagesBtn && isMessages" (click)="showMoreMessages()">{{'chat.previous-message-btn' | translate}}</div>
     <div class="message-list" id="messages-wrap" #messagesWrap (scroll)="onScroll($event)">
         <!-- <div  #messagesHeight > -->
         <div *ngFor="let message of messagesList, let i = index">
