--- a/src/app/chat/components/messenger/messenger.component.html
+++ b/src/app/chat/components/messenger/messenger.component.html
@@ -3,8 +3,8 @@
         <div class="collocutor">
             <a [routerLink]="'/user/' + collocutorData.collocutorId | localize">
       {{ collocutorData.collocutorName }} {{ collocutorData.collocutorSurname }} </a>
-      <span *ngIf="collocutorData.collocutorOnline == true">онлайн</span>
-      <span *ngIf="collocutorData.collocutorOnline === false">офлайн</span>
+            <span *ngIf="collocutorData.collocutorOnline == true">{{'general.online' | translate}}</span>
+            <span *ngIf="collocutorData.collocutorOnline === false">{{'general.offline' | translate}}</span>
         </div>
         <div class="massager-tools">
             <app-show-uploaded-files [chatRoom]="collocutorData.roomId"></app-show-uploaded-files>
