--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.html
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.html
@@ -4,11 +4,11 @@
     </div>
     <div class="container">
         <div class="column">
-            <h2>Восстановление пароля</h2>
+            <h2>{{'auth-page.reset-pass-title' | translate}}</h2>
 
             <form #form="ngForm" [formGroup]="registrationForm" (ngSubmit)="registrate()">
                 <mat-form-field>
-                    <mat-label>Введите пароль</mat-label>
+                    <mat-label>{{'auth-page.password-field.title' | translate}}</mat-label>
                     <input matInput type="password" [type]="hideF ? 'password' : 'text'" formControlName="password" required />
                     <div class="pass-erorrs">
                         <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber') ? 'unvalidated': 'validated'"></span>
@@ -18,36 +18,43 @@
                         <span [ngClass]="registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
                         <ul class="description">
 
-                            <li *ngIf=" registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber')">Должна быть минимум одна цифра
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') || registrationForm.controls['password'].hasError('hasNumber')">
+                                {{'auth-page.password-field.numbers-required' | translate}}
                             </li>
-                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSmallCase')">Должна быть минимум одна маленькая буква</li>
-                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasCapitalCase')">Должна быть минимум одна большая буква</li>
-                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSpecialCharacters')">Должна быть минимум один спец символ</li>
-                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('minLengthCharacters')">Пароль не меньше 8 символов
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSmallCase')">
+                                {{'auth-page.password-field.small-case' | translate}}</li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasCapitalCase')">
+                                {{'auth-page.password-field.uppercase' | translate}}</li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('hasSpecialCharacters')">
+                                {{'auth-page.password-field.specific-simbols' | translate}}</li>
+                            <li *ngIf=" registrationForm.controls['password'].hasError('required') ||registrationForm.controls['password'].hasError('minLengthCharacters')">
+                                {{'auth-page.password-field.min-length' | translate}}
                             </li>
                         </ul>
                     </div>
                     <button class="pass" mat-icon-button matSuffix (click)="hideF = !hideF" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideF" [style.color]="hideF ? '#DBDBDB': '#000'">
             <mat-icon>{{hideF ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
-                    <mat-error *ngIf="registrationForm.get('password').hasError('required')">{{ "Введите пароль" }}</mat-error>
-                    <mat-error *ngIf="registrationForm.get('password').invalid && !registrationForm.get('password').hasError('required')">{{'Слабый пароль' }}
+                    <mat-error *ngIf="registrationForm.get('password').hasError('required')">{{'auth-page.login.put-password' | translate}}</mat-error>
+                    <mat-error *ngIf="registrationForm.get('password').invalid && !registrationForm.get('password').hasError('required')">
+                        {{'auth-page.registr.week-password' | translate}}
                     </mat-error>
                 </mat-form-field>
                 <mat-form-field>
-                    <mat-label>Повторно введите пароль</mat-label>
+                    <mat-label>{{'auth-page.registr.repeat-password' | translate}}</mat-label>
                     <input matInput type="password" [type]="hideS ? 'password' : 'text'" formControlName="password_confirmation" required />
                     <button class="pass" mat-icon-button matSuffix (click)="hideS = !hideS" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hideS" [style.color]="hideS ? '#DBDBDB': '#000'">
             <mat-icon>{{hideS ? 'visibility_off' : 'visibility'}}</mat-icon>
           </button>
-                    <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('required')">{{ "Введите пароль" }}
+                    <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('required')">{{'auth-page.login.put-password' | translate}}
                     </mat-error>
-                    <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">{{ "Пароли не совпадают" }}
+                    <mat-error *ngIf="registrationForm.get('password_confirmation').hasError('NoPassswordMatch')">
+                        {{'auth-page.registr.different-pass' | translate}}
                     </mat-error>
                 </mat-form-field>
                 <section class="submit">
                     <button mat-button type="submit" mat-raised-button>
-            Сохранить
+                      {{'general.save' | translate}}
           </button>
                 </section>
             </form>
