--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/pie-chart-dashboard/pie-chart-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/pie-chart-dashboard/pie-chart-dashboard.component.scss
@@ -1,4 +1,3 @@
-
 .chart.zero {
     position: relative;
     canvas {
@@ -16,9 +15,11 @@
         top: 0;
         left: 50%;
         transform: translateX(-50%);
-        border: 40px solid #E9ECF1;;
+        border: 40px solid #E9ECF1;
+        ;
     }
 }
+
 @media (max-width: 1499px) {
     .chart.zero {
         &:before {
