--- a/src/app/shared/modules/system-messages/system-messages.component.html
+++ b/src/app/shared/modules/system-messages/system-messages.component.html
@@ -1,34 +1,24 @@
 <section class="notifications">
-  <mat-icon aria-hidden="false" matBadge="1" aria-label="Example home icon" matBadgeColor="warn" (click)="toggleMessageList()" class="test" [ngClass]="{active: newSystemMessages}">notifications
-  </mat-icon>
-  <div class="notifications-wrap" *ngIf="showMessagesListBlock" (clickOutside)="toggleMessageList()" [exclude]="'.test'"> 
-    <div class="notifications-title"  *ngIf="systemMessagesArr.length !== 0">
-      <span (click)="deleteMessageItem(0, systemMessagesArr.length)">Очистить все</span> 
-    </div>
-    <div class="notifications-list"  *ngIf="systemMessagesArr.length !== 0">
-      <ng-container *ngFor="let message of systemMessagesArr; let i = index ">
-    
-
-          <div class="notification-item" *ngIf="message.message">
-            <div class="notification-item__icon">
-              <img src="assets/images/icons/systemMessages/{{message.message}}.png" alt="">
-            </div>
-            <div class="notification-item__text" (click)="openChat(message.roomId, message.id, i, message.deal_id)">
-              
-              <!-- <span>{{ notifiation.messageType[message.name] | translate }} </span>"{{message.offers_title}}"</div> -->
-
-              <span>{{ notifiation[message.message] | translate }} </span>"{{message.offers_title}}"</div>
-            <div class="notification-item__date">{{message.created_at | dateFormatPipe: 'dd.MM HH:mm' }}</div>
-            <div class="notification-delete" (click)="deleteMessageItem(message.id, i)"></div>
-          </div>
-
-  
-      </ng-container>
-
+    <mat-icon aria-hidden="false" matBadge="1" aria-label="Example home icon" matBadgeColor="warn" (click)="toggleMessageList()" class="test" [ngClass]="{active: newSystemMessages}">notifications
+    </mat-icon>
+    <div class="notifications-wrap" *ngIf="showMessagesListBlock" (clickOutside)="toggleMessageList()" [exclude]="'.test'">
+        <div class="notifications-title" *ngIf="systemMessagesArr.length !== 0">
+            <span (click)="deleteMessageItem(0, systemMessagesArr.length)">{{'bell-notifications.clear-all' | translate}}</span>
+        </div>
+        <div class="notifications-list" *ngIf="systemMessagesArr.length !== 0">
+            <ng-container *ngFor="let message of systemMessagesArr; let i = index ">
+                <div class="notification-item" *ngIf="message.message">
+                    <div class="notification-item__icon">
+                        <img src="assets/images/icons/systemMessages/{{message.message}}.png" alt="">
+                    </div>
+                    <div class="notification-item__text" (click)="openChat(message.roomId, message.id, i, message.deal_id)">
+                        <span>{{ "bell-notifications." + [message.message] | translate }} </span>"{{message.offers_title}}"</div>
+                    <div class="notification-item__date">{{message.created_at | dateFormatPipe: 'dd.MM HH:mm' }}</div>
+                    <div class="notification-delete" (click)="deleteMessageItem(message.id, i)"></div>
+                </div>
+            </ng-container>
+        </div>
+        <span class="emptyList" *ngIf="systemMessagesArr.length === 0">{{'bell-notifications.no-messages' | translate}}</span>
 
     </div>
-
-    <span class="emptyList" *ngIf="systemMessagesArr.length === 0">Уведомлений нет</span>
-
-  </div>
 </section>
