--- a/src/app/chat/components/collocutors-list/collocutor-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutor-list.component.scss
@@ -225,6 +225,9 @@
       }
     }
     .message-preview {
+      .message-information{
+        width: calc(100% - 45px);
+      }
       .photo {
         margin-right: 15px;
       }
