--- a/src/app/shared/modules/user-header-menu/user-header-menu.component.html
+++ b/src/app/shared/modules/user-header-menu/user-header-menu.component.html
@@ -10,7 +10,7 @@
       <li> <a [routerLink]="'/dashboard'| localize">Дашбоард</a> </li>
       <li> <a [routerLink]="'/dashboard/finance'| localize">Финансы</a> </li>
       <li> <a [routerLink]="'/dashboard/chat-room'| localize">Чат</a> </li>
-      <li> <a [routerLink]="'/dashboard/projects'| localize">Проэкты</a> </li>  
+      <li> <a [routerLink]="'/dashboard/projects'| localize">Проекты</a> </li>  
       <li> <a [routerLink]="'/dashboard/my-services'| localize">Мои услуги</a> </li>
       <li class="system-item arrow-top"> <a [routerLink]="'/dashboard/settings'| localize">Настройки</a> </li>
       <li class="system-item" (click)="logOut()">Выйти</li>
