--- a/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/home-dashboard-page/user-dashboard/user-dashboard.component.scss
@@ -112,7 +112,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      width: calc(30% - 20px);
+      width: calc(25% - 20px);
       .chart-body {
         display: flex;
         flex-direction: column;
@@ -204,20 +204,20 @@
       }
     }
     .pie-chart {
-      width: calc(20% - 20px);
+      width: calc(25% - 20px);
       h5 {
         margin-bottom: 35px;
       }
       .chart-body {
         margin-bottom: 35px;
-
-        
+        display: flex;
+        justify-content: center;
       }
 
       .legend {
         display: flex;
         align-items: center;
-        margin: 10px 0 10px 43px;
+        margin: 10px 0 10px 20px;
         span{
           &:last-child {
             margin-left: 16px;
@@ -228,6 +228,7 @@
             line-height: 18px;
             color: #707683;
             margin: 0;
+            padding-left: 7px;
           }
           &:first-child {
             display: block;
